appId: com.hanzogui.hanzoguikitchensink
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Select'
    centerElement: true
- tapOn: 'Select'
- assertVisible: 'Apple'
# Test: select opens when tapped
- tapOn: 'Apple'
- assertVisible: 'Pear'
