appId: com.gui.guikitchensink
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Sheet'
    centerElement: true
- tapOn: 'Sheet'
- assertVisible: 'Open'
# Test: sheet opens when button tapped
- tapOn: 'Open'
